# Claude_bot

./: .env.example  .env.local  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt
docker/: Dockerfile  docker-compose.yml
scripts/: setup.py  test_bot.py
src/config/: constants.py  settings.py
src/core/: bot_manager.py
src/handlers/: news_handler.py  segment_handler.py  speed50_handler.py  start_handler.py
src/services/: ai_service.py  category_detector.py  segment_service.py
src/utils/: file_manager.py  logger.py
tests/tests/: conftest.py
tests/unit/: test_bot_flow.py  test_handlers.py  test_segment_service.py  test_services.py
