[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-news-bot"
version = "1.0.0"
description = "Advanced Kannada News Bot with AI-powered content generation"
authors = [{
    [build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-news-bot"
version = "1.0.0"
description = "Advanced Kannada News Bot with AI-powered content generation"
authors = [{